--- a/client_utilities/known_clients.json
+++ b/client_utilities/known_clients.json
@@ -2,9 +2,24 @@
   { "name": "Wurst", "class": "net.wurstclient.WurstClient" },
   { "name": "Meteor", "class": "meteordevelopment.meteorclient.MeteorClient" },
   { "name": "Aristois", "class": "dev.fuchsia.Aristois" },
+  { "name": "Aristois", "class": "net.aristois.Aristois" },
   { "name": "Sigma", "class": "me.earthme.sigma.Sigma" },
+  { "name": "Sigma", "class": "sigma.Sigma" },
   { "name": "LiquidBounce", "class": "net.ccbluex.liquidbounce.LiquidBounce" },
   { "name": "Inertia", "class": "com.inertiaclient.Inertia" },
   { "name": "Impact", "class": "impact.Impact" },
-  { "name": "Future", "class": "me.aquavit.futures.client.Future" }
+  { "name": "Impact", "class": "com.github.steveice10.mc.impact.ImpactMod" },
+  { "name": "Future", "class": "me.aquavit.futures.client.Future" },
+  { "name": "Phobos", "class": "phobos.Phobos" },
+  { "name": "Phobos", "class": "com.earth.phobos.Phobos" },
+  { "name": "WeedHackPremium", "class": "com.weedhack.WeedHackPremiumBeta" },
+  { "name": "RusherHack", "class": "rusherhack.RusherHack" },
+  { "name": "RusherHack", "class": "com.rusherhack.RusherHack" },
+  { "name": "Novoline", "class": "de.novoline.Novoline" },
+  { "name": "Tenacity", "class": "com.tenacity.Tenacity" },
+  { "name": "Bozo", "class": "com.bozo.BozoClient" },
+  { "name": "Mio", "class": "com.mio.MioClient" },
+  { "name": "Raven", "class": "com.ravenclient.RavenClient" },
+  { "name": "Vape", "class": "com.vape.Vape" },
+  { "name": "DripLite", "class": "com.driplite.DripLite" }
 ]
